Add Asha images and make initial params changes

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,13 +1,13 @@
 // Colors
 :root {
-  --red-0: #ff0000;
-  --red-1: #ff5252;
-  --red-2: #ff7c7c;
-  --red-3: #ffafaf;
-  --red-4: #ffd0d0;
-  --red-5: #ffe4e4;
-  --red-5-5: #ffecec;
-  --red-6: #fff3f3;
+   --red-0: #5f8700;
+   --red-1: #6c8a25;
+   --red-2: #768f3b;
+   --red-3: #849657;
+   --red-4: #8a9968;
+   --red-5: #8d9677;
+   --red-5-5: #919683;
+   --red-6: #a7ab9f;
 
   --grey-9: #999;
   --grey-7: #777;
